update the hyperlink in linkedin

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <a class="text-dark" href="https://github.com/dextermas" target="_blank">
                     <i class="icon-spacing fab fa-github"></i>
                     GitHub - dextermas</a>
-                <a class="text-dark" href="www.linkedin.com/in/dexter-mas" target="_blank">
+                <a class="text-dark" href="https://linkedin.com/in/dexter-mas" target="_blank">
                     <i class="icon-spacing fab fa-linkedin-in"></i>
                     LinkedIn - dextermas</a>
                 <div class="content mt-5">
