Update fav icon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/aos.css">
 
 
-	<link rel="icon" href="assets/img/favicon2.ico">
+	<link rel="icon" href="assets/img/ico.png">
 </head>
 <body>
 <!-- header section start -->
