--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
 <section class="contact" id="contact">
     <div class="container">
-        <h2 class="mb-5">Contact Me</h2>
+        <h2 class="mb-3">Contact Me</h2>
 
         <div class="row">
             <div class="col-md-6 mt-2 mb-5">
@@ -411,7 +411,7 @@
                       </div>
                     </div>
                     <button class="btn btn-outline-primary" type="submit" value="send">Send Message</button>
-                    <div id="my-form-status" class="col-md-9 mt-3"></div>
+		<!--<div id="my-form-status" class="col-md-9 mt-3"></div> -->
                     
                   </form>
                   
