--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
 <!-- resources section start -->
 
-<section class="resources mb-5" id="resources">
+<section class="resources" id="resources">
 	<div class="container">
         <h2>Learning sites I suggest to use</h2>
 		<div class="resources-logo d-flex align-items-center justify-content-center flex-wrap">
@@ -386,7 +386,7 @@
         <h2 class="mb-3">Contact Me</h2>
 
         <div class="row">
-            <div class="col-md-6 mt-2 mb-5">
+            <div class="col-md-6 mt-2">
 
                 <form action="https://formspree.io/f/mgerwydk" method="POST" id="my-form">
                     <div class="form-row">
