--- a/projects/baby-corp/index.html
+++ b/projects/baby-corp/index.html
@@ -98,14 +98,14 @@
         	
     </div>
 
-<section class="hero-banner container mb-5" id="hero-banner">
+<section class="hero-banner mb-5" id="hero-banner">
 
-    <div class="content">
-        <h1>Lorem ipsum dolor <br> sit amet consectetur</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati vel quo nam corrupti velit quis<br> quaerat, sapiente, expedita.</p>
-        <a href="#" class="btn btn-primary btn-lg">Learn More
+    <div class="content container">
+        <h1 class="text-center">Lorem ipsum dolor <br> sit amet consectetur</h1>
+        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati vel quo nam corrupti velit quis<br> quaerat, sapiente, expedita.</p>
+        <center><a href="#" class="btn btn-primary btn-lg">Learn More
              <!-- <span><i class="fas fa-greater-than fa-sm"></i></span> -->
-        </a>
+        </a></center>
     </div>
 </section>
 
@@ -200,19 +200,23 @@
 
 </section>
 
-<section class="inquire container mb-5">
-    <div class="row">
+<section class="inquire mb-5">
+    <div class="container">
+        <div class="row">
         <div class="col-md-12">
-            <div class="image-container">
+            <div class="">
                 <div class="box">
                     <div class="content">
-                        <h3 class="baloo">Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+                        <center>
+                            <h3 class="baloo">Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In consequuntur recusandae debitis?</p>
-                        <a href="#" class="btn btn-primary">Inquire Now</a>
+                        <a href="#" class="btn btn-primary btn-lg">Inquire Now</a>
+                        </center>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </section>
 
@@ -236,19 +240,19 @@
             <div class="col-lg-4 col-md-4 col-sm-12 ">
                 <img class="mb-3 img-fluid"src="assets/img/product-1.png" alt="">
                 <div class="carousel-caption">
-                    <h1 class="baloo text-dark text-left">Bloom Chummies: The Lion King's Nala</h1>
+                    <h2 class="baloo text-dark text-left">Bloom Chummies: The Lion King's Nala</h2>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 ">
                 <img class="mb-3 img-fluid"src="assets/img/product-2.png" alt="">
                 <div class="carousel-caption">
-                    <h1 class="baloo text-dark text-left">Bloom Chummies: The Lion King's Nala</h1>
+                    <h2 class="baloo text-dark text-left">Bloom Chummies: The Lion King's Nala</h2>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 ">
                 <img class="mb-3 img-fluid"src="assets/img/product-3.png" alt="">
                 <div class="carousel-caption">
-                    <h1 class="baloo text-dark text-left">Bloom Chummies: The Lion King's Nala</h1>
+                    <h2 class="baloo text-dark text-left">Bloom Chummies: The Lion King's Nala</h2>
                 </div>
             </div>
     </div>
@@ -258,7 +262,7 @@
 
 <!-- feature news and blogs -->
 
-<section class="feature container mb-5" >
+<!-- <section class="feature container mb-5" >
     <h1 class="baloo text-center mb-5">Feature News & Blogs</h1>
 
     <div class="row mb-5">
@@ -327,15 +331,15 @@
         </div>
     </div>
     
-</section>
+</section> -->
  
     <div class="dashed mb-5">
         <hr class="dashed-line">
     </div>
 
 
-<section class="footer">
-    <div class="row mb-5">
+<section class="footer container">
+    <div class="row mb-1">
         <div class="col-md-6">
             <h1 class="baloo">About Baby Company</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum voluptatum odit nostrum placeat, iusto ea voluptatibus! Quibusdam, ipsum tenetur ut rerum molestias id at adipisci!</p>
@@ -344,7 +348,7 @@
             <div class="social-links mt-5 mb-5">
                 <ul class="nav align-items-center">
                     <li class="text-center">
-                        <a class="logo-color-f" href=""><i class="fab fa-facebook"></i></a>
+                        <a class="logo-color-f" href=""><i class="fab fa-facebook-f"></i></a>
                     </li>
                     <li class="text-center">
                         <a class="logo-color-i" href=""><i class="fab fa-instagram"></i></a>
