--- a/index.html
+++ b/index.html
@@ -449,6 +449,10 @@
                    
                   </ul>
                 <div class="content d-flex justify-content-between flex-column ">
+		    <a href="index.html" class="logo ">
+	                <img src="assets/img/logo.png" alt="Logo">
+	            </a>
+
                     <p class="text-justify">If you like what I've built here below my contact details, And let's talk about your inquiry.</p>
 
                 <!-- <p><i class="icon-spacing fas fa-phone-alt"></i>Call directy at: 091234567890</p> -->
