Add the houzz to portfolio

--- a/index.html
+++ b/index.html
@@ -215,7 +215,29 @@
             </div>
         </div>
 
-        <div class="row">
+	    <div class="row">
+	    <div class="col-md-6" data-aos="zoom-in-right">
+		<a href="http://vb7h2bj.preview.aedigitalservices.com/" rel="noopener noreferrer" target="_blank">
+		    <img class="img-fluid" src="assets/img/projects/houzz.png" alt="houzz">
+		</a>               
+	      </div>
+	      <div class="col-md-6">
+		<h2>Houzz</h2>
+		<p class="date">April 2022</p>
+		<ul class="mb-5">
+		    <li>
+			Whether your current home no longer meets your needs or you've bought a house that you want to personalize
+		    </li>
+		    <li>
+			HTML, CSS, and JavaScript
+		    </li>
+		    
+		</ul>
+		<a class="direct-link btn btn-outline-primary" href="http://vb7h2bj.preview.aedigitalservices.com/"><i class="fas fa-external-link-alt"></i>&nbsp;View Houzz</a>
+	    </div>
+	</div>
+
+<!--         <div class="row">
             <div class="col-md-6" data-aos="zoom-in-right">
                 <a href="http://dexieciouscreations.ml" rel="noopener noreferrer" target="_blank">
                     <img class="img-fluid" src="assets/img/projects/dexieciouscreations.jpg" alt="Dexiecious Creations">
@@ -235,7 +257,7 @@
                 </ul>
                 <a class="direct-link btn btn-outline-primary" href="http://dexieciouscreations.ml"><i class="fas fa-external-link-alt"></i>&nbsp;View Dexiecious Creations</a>
             </div>
-        </div>
+        </div> -->
             
     </div>
 	
