--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
 	<link rel="icon" href="assets/img/ico.png">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMSZWCPNLF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMSZWCPNLF');
+</script>
 <body>
 <!-- header section start -->
 
