--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	<link rel="icon" href="assets/img/ico.png">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMSZWCPNLF"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FY6X1PX85B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-YMSZWCPNLF');
+  gtag('config', 'G-FY6X1PX85B');
 </script>
 <body>
 <!-- header section start -->
