Update page builders

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
                     <ul>
                         <li>
-                             Proficient in using WordPress, Elementor, and DIVI Builder to create visually stunning and highly functional websites that are optimized for speed and performance. In addition, I have experience in creating eye-catching HTML email campaigns that engage and captivate audiences.
+                             Proficient in using WordPress, Elementor, Divi and Bricks Builder to create visually stunning and highly functional websites that are optimized for speed and performance. In addition, I have experience in creating eye-catching HTML email campaigns that engage and captivate audiences.
                         </li>
                         <li>
-                            WordPress(DIVI and Elementor), HTML Email Ads, Adobe Photoshop, SEO
+                            WordPress(Elementor, Divi and Bricks Builder), HTML Email Ads Creative, Adobe Photoshop, SEO
                         </li>
                         
                     </ul>
