--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                 <div class="tab-pane fade show active" id="list-ax" role="tabpanel" aria-labelledby="list-ax-list">
                     <h2>Web Developer <span class="exp-company">@ AffinityX</span></h2>
 
-                    <p class="date">March 2022 - Present</p>
+                    <p class="date">March 2022 - November 2024</p>
 
                     <ul>
                         <li>
-                             Proficient in using WordPress, Elementor, Divi and Bricks Builder to create visually stunning and highly functional websites that are optimized for speed and performance. In addition, I have experience in creating eye-catching HTML email campaigns that engage and captivate audiences.
+                             Proficient in using WordPress (Elementor, Divi and Bricks Builder), Wix and Squarespace to create visually stunning and highly functional websites that are optimized for speed and performance. In addition, I have experience in creating eye-catching HTML email campaigns that engage and captivate audiences.
                         </li>
                         <li>
                             WordPress(Elementor, Divi and Bricks Builder), HTML Email Ads Creative, Adobe Photoshop, SEO
