--- a/index.html
+++ b/index.html
@@ -494,9 +494,6 @@
                     <i class="icon-spacing fab fa-github"></i>&nbsp;Dexter Mas</a>
                 <a class="text-dark" href="https://linkedin.com/in/dexter-mas" target="_blank">
                     <i class="icon-spacing fab fa-linkedin-in"></i>&nbsp; Dexter Mas</a>
-                <div class="content mt-3">
-                    <a class="text-dark" href="index.html" title="Dexter">&copy; 2024 | Dexter Mas</a>
-                </div>
                 
                 </div>
                 
@@ -511,6 +508,19 @@
 
 
 <!-- contact section end -->
+	
+<!-- footer section start -->
+
+<section class="footer" id="footer">
+    <div class="container">
+	<div class="row">
+        	<span>&copy; 2024 | <a class="text-dark" href="/" title="Dexter">Dexter Mas</a>. All rights reserved.</span>        
+        </div>
+    </div>
+	
+</section>
+
+<!-- footer section end -->
 
 
     <!-- jquery cdn link -->
